Solo falta mejorar lo intuitivo del software, no es tan consumer friendly, pero todo está funcionando.